<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login_rl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_splash_bg" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp">

        <TextView
            android:id="@+id/activity_login_textview_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/str_sign"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12sdp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/activity_login_cardview_login"
            android:layout_below="@+id/activity_login_textview_header">


            <ImageView
                android:id="@+id/activity_login_imageview_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_company_icon" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/activity_login_cardview_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@drawable/ic_login_bg_shadow">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/str_login_username"
                    android:theme="@style/MyEditTextWhite">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/activity_login_edittext_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text|textNoSuggestions"
                        android:maxLines="1"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhiteLight"
                        android:textSize="@dimen/_14sdp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:hint="@string/str_login_password"
                    android:theme="@style/MyEditTextWhite"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorWhiteLight">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/activity_login_edittext_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword|textNoSuggestions"
                        android:maxLines="1"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhiteLight"
                        android:textSize="@dimen/_14sdp" />

                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:id="@+id/activity_login_checkbox_remember_pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:checked="false"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/str_login_remember_pw"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_12sdp"
                    android:theme="@style/MyCheckBox" />

                <Button
                    android:id="@+id/activity_login_buttton_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/ic_button_bg"
                    android:text="@string/str_login"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/activity_login_textview_forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/str_login_forgot_password"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/activity_login_textview_dont_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/str_login_dont_account"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_12sdp"
        android:visibility="gone" />
</RelativeLayout>
